2016-02-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Use NSDebugLog for most debug warnings
	* Source/NSUserDefaults.m: Restructure to cache flag information
	from NSProcessInfo directly on initialization, so it can be used
	when parsing property lists in the argument domain, avoiding any
	recursion trying to parse arguments.  Remove obsolete code for
	for parsing -GS and --GS argument prefixes specially.
	Make sure that argument parsiong behavior matches OSX apart from
	The handling of a lone '-' used as key/value, and for this case
	document the difference (since the GNUstep behavior is more useful
	and changing it would have a real chance of breaking existing code).

2016-02-12  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSObjCRuntime.h: Define macros for
	non-null sections if available.

2016-02-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: In GSCurrentThread() the check for exiting
	thread needs to NOT be wrapped in an exception handler, since the
	exception handling code can attempt to get the current thread,
	causing recursion.

2016-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m:
	Remove dependency on NSUserDefaults in order to parse property list
	in program arguments ... get boolean defaults settings from the
	argument domain

2016-02-09  Larry Campbell <lcampbel@akamai.com>

	* Source/NSUserDefaults.m: Fix for bug #46956

2016-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Use uint32_t rather than unsigned long ... we are
	actually dealing with 4 byte values (from htonl), not native longs,
	and this can result in buffer overrun when we try copying a 64bit
	value into a 32bit buffer on a 64bit system.

2016-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Fix for decoding base64 with unknown characters
	after a trailing '='

2016-01-29  Richard Frith-Macdonald <rfm@gnu.org>
